deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-v1
  namespace: default
  labels:
    app: echoserver
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echoserver
      version: v1
  template:
    metadata:
      labels:
        app: echoserver
        version: v1
    spec:
      containers:
        - name: echoserver
          image: docker.io/amburskui/echoserver:v0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "64Mi"
              cpu: "100m"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-v2
  namespace: default
  labels:
    app: echoserver
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echoserver
      version: v2
  template:
    metadata:
      labels:
        app: echoserver
        version: v2
    spec:
      containers:
        - name: echoserver
          image: docker.io/amburskui/echoserver:v0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "64Mi"
              cpu: "100m"
