deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-service
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: http
      appProtocol: http
  selector:
    app: echoserver
