deployments/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: echoservice-destinationrule
spec:
  host: echoserver-service
  subsets:
    - name: echoserver-service-v1
      labels:
        version: v1
    - name: echoserver-service-v2
      labels:
        version: v2
